@@ -1,5 +1,6 @@
-#ifndef _SM_CRYPTO_CERT_X509RSAKEY
-#define _SM_CRYPTO_CERT_X509RSAKEY
+#ifndef _SM_CRYPTO_CERT_X509KEY
+#define _SM_CRYPTO_CERT_X509KEY
+#include "Crypto/Cert/RSAKey.h"
 #include "Crypto/Cert/X509File.h"
 #include "Data/ByteArray.h"
 
@@ -7,7 +8,7 @@ namespace Crypto
 {
 	namespace Cert
 	{
-		class X509Key : public Crypto::Cert::X509File
+		class X509Key : public Crypto::Cert::X509File, public Crypto::Cert::RSAKey
 		{
 		private:
 			KeyType keyType;
@@ -30,20 +31,21 @@ namespace Crypto
 			Crypto::Cert::X509Key *CreatePublicKey() const;
 			Bool GetKeyId(const Data::ByteArray &keyId) const; //20 bytes
 
-			const UInt8 *GetRSAModulus(OptOut<UOSInt> size) const;
-			const UInt8 *GetRSAPublicExponent(OptOut<UOSInt> size) const;
-			const UInt8 *GetRSAPrivateExponent(OptOut<UOSInt> size) const;
-			const UInt8 *GetRSAPrime1(OptOut<UOSInt> size) const;
-			const UInt8 *GetRSAPrime2(OptOut<UOSInt> size) const;
-			const UInt8 *GetRSAExponent1(OptOut<UOSInt> size) const;
-			const UInt8 *GetRSAExponent2(OptOut<UOSInt> size) const;
-			const UInt8 *GetRSACoefficient(OptOut<UOSInt> size) const;
+			virtual const UInt8 *GetRSAModulus(OptOut<UOSInt> size) const;
+			virtual const UInt8 *GetRSAPublicExponent(OptOut<UOSInt> size) const;
+			virtual const UInt8 *GetRSAPrivateExponent(OptOut<UOSInt> size) const;
+			virtual const UInt8 *GetRSAPrime1(OptOut<UOSInt> size) const;
+			virtual const UInt8 *GetRSAPrime2(OptOut<UOSInt> size) const;
+			virtual const UInt8 *GetRSAExponent1(OptOut<UOSInt> size) const;
+			virtual const UInt8 *GetRSAExponent2(OptOut<UOSInt> size) const;
+			virtual const UInt8 *GetRSACoefficient(OptOut<UOSInt> size) const;
 
 			const UInt8 *GetECPrivate(OptOut<UOSInt> size) const;
 			const UInt8 *GetECPublic(OptOut<UOSInt> size) const;
 			ECName GetECName() const;
 
 			static X509Key *FromECPublicKey(const UInt8 *buff, UOSInt buffSize, const UInt8 *paramOID, UOSInt oidLen);
+			static Optional<X509Key> FromRSAKey(NN<RSAKey> key);
 		};
 	}
 }
